<resources>
    <string name="app_name">Picos</string>
    <!--    Welcome Page    -->
    <string name="hello">Hello Beautiful,</string>
    <string name="welcome_desc">Enter your email address and your password for login</string>
    <string name="welcome_to">WELCOME TO PICOS</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_again">Password Again</string>
    <string name="your_buddy">Your Period Buddy</string>


    <string name="name">Name</string>
    <string name="username">Username</string>
    <!-- assessment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="self_assessment">Self Assessment</string>
    <string name="progressbar_start">1/4</string>
    <string name="sample_question">How long have you been married or in a committed relationship?</string>
    <string name="optionone">OptionOne</string>
    <string name="optiontwo">Option Two</string>
    <string name="option_three">Option Three</string>
    <string name="option_four">Option Four</string>
    <string name="btnnext">NEXT</string>
    <string name="btnprev">PREV</string>
    <string name="progresscurrent">currentQuest</string>
    <string name="assessment_dash">Self Assessment</string>
    <string name="assessment_desc">This assessment will help you estimate the current condition of your reproductive health</string>
    <string name="start">Start</string>
    <string name="disclaimer">Disclaimer:</string>
    <string name="well_done">Well Done!</string>
    <string name="sample_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque id pellentesque sem. </string>
    <string name="btnResult">Back to Home</string>
    <!-- assessment -->

    <!--    Home Page    -->
    <string name="calendar">Calendar</string>
    <string name="new_log_button_description">New Log</string>
    <string name="calendar_button_description">Calendar</string>
    <string name="my_cycle">My Cycle</string>
    <string name="question_home">What do you want to do?</string>
    <string name="period">Period:</string>
    <string name="day">8</string>
    <string name="self_assessment_desc">Discover your potential risk for PCOS with our self-assessment feature. Click here and take control of your health today in just a few simple steps.</string>
    <string name="my_cycle_desc">Lorem ipsum dolor sit amet ko wi lulu lulu lulu lulu lulu lulu lulu lulu lulu lulu lulu lulu lullu lulu.</string>

    <!--    Profile & Edit Profile    -->
    <string name="full_name">Full Name</string>
    <string name="last_name">Last Name</string>

    <!-- Splash & On Boarding Screen -->
    <string name="ob1_desc">What PCOS is?</string>
    <string name="ob1_content">Polycystic Ovary Syndrome (PCOS) is a hormonal disorder that affects women\'s reproductive health. It can cause irregular periods, fertility challenges, hormonal imbalances, and unwanted physical symptoms such as excessive hair growth and acne.</string>
    <string name="obTwo_title">What is the long-term risks?</string>
    <string name="ob2_content">PCOS also increases the risk of long-term health issues like diabetes, heart disease, and endometrial cancer. Understanding and managing PCOS is crucial for women\'s overall well-being.</string>
    <string name="obthree_title">PiCOS here for you!</string>
    <string name="ob3_content">Provides valuable insights and guidance to help you understand Polycystic Ovary Syndrome (PCOS) and its impact on your body. Learn how to manage symptoms, track your menstrual cycle, and connect with trusted OBGYN specialists for personalized care. Empower yourself with knowledge and proactive measures to live a healthier, happier life.</string>


    <string name="age_category">Which age category do you belong to?</string>
    <string name="age_desc">Age category helps in understanding the potential impact of age-related factors on reproductive health and hormonal balance. It provides insights into the specific age group you belong to for better assessment and recommendations.</string>
    <string name="marry_desc">The duration of marriage or committed relationships can be relevant in understanding potential fertility challenges or hormonal imbalances.</string>
    <string name="option_Yes">Yes</string>
    <string name="option_No">No</string>
    <string name="yesno_question">Are your menstrual cycles regular or irregular?</string>
    <string name="yn_desc">Menstrual cycle regularity refers to the consistent timing and duration of your periods. Regular periods usually vary between 23-35 days. Use our tracker feature to track your period cycle</string>
    <string name="categorical_question">What is your blood group?</string>
    <string name="cat_desc">Knowing your blood group is essential for medical purposes and can impact your health in certain situation.</string>
    <string name="blood_cat">A+</string>
    <string name="blood_cat2">A-</string>
    <string name="fill_question">What is your body mass index (BMI)?</string>
    <string name="fill_desc">BMI is a measure of body fat based on your height and weight. It helps assess if you have a healthy weight or if you are underweight, overweight, or obese. Calculate your BMI using a reliable online calculator or consult with a healthcare professional.</string>
    <string name="numerical_input">Numerical input</string>
    <string name="button_finished">Finished</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>