<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple"
    tools:context=".ui.activity.RegisterPage">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toTopOf="parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="413dp"
            android:layout_height="355dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_register"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="bottom"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/hello"
            android:textColor="@color/purple_dark"
            android:textSize="22dp" />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/nameRegister"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/name"
            android:textColorHint="@color/white"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:backgroundTint="@color/white"/>
        <EditText
            android:id="@+id/usernameRegister"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/username"
            android:textColorHint="@color/white"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:backgroundTint="@color/white"/>
        <EditText
            android:id="@+id/emailAddressRegister"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email_address"
            android:textColorHint="@color/white"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/white"/>

        <EditText
            android:id="@+id/passwordRegister"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:backgroundTint="@color/white"/>

        <EditText
            android:id="@+id/confirmPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:text="@string/create_account"
            android:background="@drawable/button_create_account"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>