<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lavender"
        tools:context=".ui.activity.assessment.YNQuestionFragment">


        <TextView
            android:id="@+id/tvTitleAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/self_assessment"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="360dp"
            android:layout_height="580dp"
            android:background="@drawable/layout_rounded"
            android:backgroundTint="@color/white"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleAD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="500dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_ynquestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/yesno_question"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppins_bold"/>

                <TextView
                    android:id="@+id/tv_yndesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/yn_desc"
                    android:textColor="@color/grey_desc"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_regular" />

                <TextView
                    android:id="@+id/tv_optOneYn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/question_border"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/option_Yes"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_optTwoYn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/question_border"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/option_No"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/btnYn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/purple_200"
            android:text="@string/btnnext"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>