<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.HomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


            <TextView
                android:id="@+id/welcomeMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Selamat Datang"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginStart="22sp"
                android:layout_marginTop="15sp"/>
            <TextView
                android:id="@+id/subTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:fontFamily="@font/poppins_bold"
                android:textSize="18sp"
                android:textColor="@color/purple_welcome"
                android:layout_below="@id/welcomeMessage"
                android:layout_marginStart="22sp"/>
            <FrameLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@id/welcomeMessage"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="39dp"
                android:id="@+id/frame_period_circle">

                <ImageView
                    android:id="@+id/periodCircle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_circle"
                    />

                <TextView
                    android:id="@+id/periodText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/period"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginTop="50sp"
                    android:layout_gravity="top|center"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/periodDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/day"
                    android:layout_below="@id/periodText"
                    android:textSize="36sp"
                    android:layout_marginTop="10sp"
                    android:textColor="@color/purple_day"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>

            </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
            <ImageButton
                android:id="@+id/calendarButton"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/background_circle_purple"
                android:src="@drawable/baseline_calendar_today_24"
                android:layout_below="@id/frame_period_circle"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/calendar_button_description"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar"
                android:layout_below="@id/calendarButton"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/purple_welcome"
                android:layout_marginTop="9dp" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="75dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/newLogButton"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/background_circle_white"
                android:src="@drawable/baseline_add_24"
                android:layout_below="@id/frame_period_circle"
                android:layout_alignParentEnd="true"

                android:layout_marginTop="16dp"
                android:contentDescription="@string/new_log_button_description" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="new log"
                android:layout_below="@id/newLogButton"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/purple_welcome"
                android:layout_marginTop="8dp" />
        </LinearLayout>

    </LinearLayout>
            <!-- Tambahkan komponen lainnya di sini -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_scroll_home"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/bottomTextView"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginStart="30sp"
                android:layout_marginBottom="7sp"
                android:textColor="@color/white"
                android:text="@string/question_home" />
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="341dp"
                    android:layout_height="148dp"
                    android:background="@drawable/button_create_account"/>
                <LinearLayout
                    android:id="@+id/tv_self_asessment_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="67dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="14dp"
                        android:layout_marginBottom="14dp"
                        android:layout_marginStart="18dp"
                        android:background="@drawable/ic_woman" />

                    <LinearLayout
                        android:layout_width="246dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="14dp"
                            android:layout_marginEnd="24sp"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/self_assessment"
                            android:textColor="@color/purple_home"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/tv_self_asessment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/self_assessment_desc" />

                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="51dp"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="341dp"
                    android:layout_height="148dp"
                    android:background="@drawable/button_create_account"/>

                <LinearLayout
                    android:layout_width="329dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="69dp"
                        android:layout_height="69dp"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="38dp"
                        android:layout_marginBottom="14dp"
                        android:background="@drawable/ic_cycle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="14dp"
                            android:layout_marginEnd="24sp"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/my_cycle"
                            android:textColor="@color/purple_home"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/tv_my_cycle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/my_cycle_desc" />

                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>


            <!-- Tambahkan komponen lainnya di sini -->

        </LinearLayout>
    </LinearLayout>


</ScrollView>
