<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.onboarding.OnBoardTwoFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/onboard_two"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboard_two" />

    <TextView
        android:id="@+id/tvtitle_ob2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/obTwo_title"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/lavender_dark"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboard_two" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="20dp"
        android:text="@string/ob2_content"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtitle_ob2" />

    <TextView
        android:id="@+id/btn_ob2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnnext"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/purple_welcome"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.578" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>